assets/css/style.css
:root {
  --dark-green: #067302;
  --light-green: #19a603;
  --carrot: #f26d3d;
  --tomato: #f23005;
  --gray: #f2f2f2;
}

* {
  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
}

body {
  background-color: var(--light-green);
  color: var(--gray);
}

nav {
  background-color: var(--tomato);
}

.appLogo {
  font-family: "Marck Script";
  margin-left: 10px;
  width: 500px;
  margin-left: 150px;
  text-shadow: 4px 5px 2px black;

  /* font-family: 'Vibur', cursive; */
}

@media screen and (min-width: 993px) {
  .appLogo {
    margin-left: 50px;
  }
}

.ourInputCard {
  background-color: var(--dark-green);
}

.ourRecipeCards {
  margin: 0%;
  background-color: var(--carrot);
  max-width: 250px;
  max-height: 250px;
}

#linkToRecipe {
  text-decoration: none;
  color: var(--gray);
  font-weight: bold;
}
/* we can change background to white and text color to black to look more like a normal Nutrition value chart */
.card .card-reveal {
  background-color: white;
  color: black;
  font-size: 1.25rem;
}

#banner {
  background-image: url("../images/nick-fewings-gpP-OkJ5BbI-unsplash.jpg");
  height: 300px;
  background-size: cover;
  background-position: top;
}

.card {
  display: inline-block;
  margin-left: 80px;
  margin-top: 14px;
}

.card-image {
  max-width: 302px;
  max-height: 200px;
}

ul#cardFooter li {
  display: inline;
  margin-left: 16px;
  /* padding: 100px; */
}

ul#cardFooter {
  border: solid 5px #000000;
  font-size: 15px;
  padding: 15px;
  align-items: center;
}

container#userIngridients {
  flex-wrap: wrap;
  /* margin: 50px;
  padding: 50px; */
  /* border: double; */
  /* position: relative; left: 550px; bottom: 250px; */
  justify-content: flex-start;
  flex-direction: column;
}

.chip {
  margin: 20px;
}

.close {
  color: red;
}

.card-content {
  background-color: var(--carrot);
  box-shadow: 10px 5px 5px black;
}

#generate-recipe {
  margin-top: 15px;
  /* margin-left: 25px; */
  background-color: var(--tomato);
  box-shadow: 10px 5px 5px black;
}

#searchBtn {
  margin-top: 15px;
  /* margin-left: 25px; */
  background-color: var(--light-green);
  box-shadow: 10px 5px 5px black;
}

#mobile-demo {
  background-color: var(--carrot);
  border: solid 5px white;
  width: 320px;
  text-align: center;
  z-index: 100;
  padding-top: 30px;
  height: 100vh;
}

.sidenav-overlay {
  z-index: 10;
  /* opacity: 0 !important; */
}

li.aText {
  color: white;
  text-decoration: underline;
}

#welcomeMsg {
  color: white;
  text-shadow: 2px 2px 2px black;
  /* border: solid black; */
  font-size: 12pt;
  margin: 5px;
  margin-bottom: 20px;
  margin-top: 10px;
}
/* greeting card for user input of ingredients  */
.white-text {
  font-size: 14pt;
  text-shadow: 2px 2px 2px black;
}

#autocomplete-input {
  color: white;
  font-weight: bolder;
  text-shadow: 5px 1px 2px black;
}

h1 {
  margin: 5px;
  margin-bottom: 20px;
}

@media screen and (min-width: 600px){
  #cardHolder {
    width: 50%;
  }

  #autocomplete-input {
    /* margin-right: 2rem !important; */
    margin-left: 1rem !important;
  }
}

.small-one {
  margin-right: 30px;
  margin-left: 30px;
}

.big-one {
  font-size: 150px;
  margin-top: 25px;
}

.btn-one {
  margin-left: 10px;
}

